--- a/config.default.json
+++ b/config.default.json
@@ -1,12 +1,12 @@
 {
 	"discord_bot_token": "",
-	"discord_bot_channel": "",
-	"discord_bot_mention_user_id": "",
+	"discord_bot_channel": "1114171214424973384",
+	"discord_bot_mention_user_id": "341826124751306764",
 	"discord_bot_gold_token": "",
 	"discord_bot_gold_id": "",
 	"discord_golden_code_channels": [],
 	"captchakey": "",
-	"captchaservice": "",
+	"captchaservice": "",	
 	"useragent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36",
 	"webinterface": false,
 	"webinterface_port": 81,
